# serdev

./: Cargo.toml  README.md  Taskfile.yml
.github/workflows/: CI.yml  auto_approve.yml
examples/: Cargo.toml
examples/examples/: readme.rs  user.rs  validator.rs
examples/reexport/: Cargo.toml
examples/reexport/reexporter/: Cargo.toml
examples/reexport/reexporter/src/: lib.rs
examples/reexport/src/: main.rs
sample/: Cargo.toml
sample/src/: main.rs
serdev/: Cargo.toml
serdev/benches/: transfer.rs
serdev/examples/: readme.rs
serdev/src/: lib.rs
serdev_derive/: Cargo.toml
serdev_derive/src/: internal.rs  lib.rs
serdev_derive/src/internal/: reexport.rs  target.rs  validate.rs
