[package]
name          = "serdev"
version       = "0.2.0"
edition       = "2021"
authors       = ["kanarus <kanarus786@gmail.com>"]
documentation = "https://docs.rs/serdev"
homepage      = "https://crates.io/crates/serdev"
repository    = "https://github.com/ohkami-rs/serdev"
readme        = "../README.md"
license       = "MIT"
description   = "SerdeV - Serde with Validation"
keywords      = ["serde", "validation", "serialization"]
categories    = ["encoding", "rust-patterns", "no-std", "no-std::no-alloc"]

[dependencies]
serdev_derive = { version = "=0.2.0", path = "../serdev_derive" }
serde         = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0" # for README doc test
rand       = "0.8" # for bench

[features]
nightly = []
DEBUG   = []

### DEBUG ###
#default = ["DEBUG"]